further fixed the button over flow on small screens

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -111,5 +111,8 @@
     .badge-secondary{
       font-size:1.2rem
     }
+    .mobile-text{
+      font-size: .8rem
+    }
   }
 }
